Second Commit: li>input(checkbox) ok

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <button onclick="addTask()" type="button">Adicionar</button>
     
 
-    <ul id="task-list" type="none"></ul>
+    <ul id="task-list" type="none">
+
+    </ul>
 </body>
 </html>
