--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <!DOCTYPE html>
 <html lang="pt">
 <head>
@@ -5,15 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TO DO LIST</title>
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js" deffer></script>
 </head>
 <body>
     <h1>To-do List</h1>
 
+    <form id="task-form">
     <input type="text" id="task" placeholder="Digite sua tarefa">
 
-    <button onclick="addTask()" type="button">Adicionar</button>
-    
+    <button onclick="addTask()" type="button" >+</button>
+    </form>
 
     <ul id="task-list" type="none">
 
