--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
     <h1>To-do List</h1>
 
     <form id="task-form">
-    <input type="text" id="task" placeholder="Digite sua tarefa">
+    <input type="text" id="task" placeholder="Digite sua tarefa" autofocus>
 
     <button onclick="addTask()" type="button" >+</button>
     </form>
+    
 
     <ul id="task-list" type="none">
 
