New Commit: Refactoring code, include ID, process 1.0 to add localStorage

--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TO DO LIST</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" deffer></script>
+    <script src="css/style.css" deffer></script>
 </head>
 <body>
     <h1>To-do List</h1>
 
     <form id="task-form">
-    <input type="text" id="task" placeholder="Digite sua tarefa" autofocus>
+    <input type="text" data-index="new" id="task" placeholder="Digite sua tarefa" autofocus>
 
     <button onclick="addTask()" type="button" >+</button>
     </form>
     
 
     <ul id="task-list" type="none">
+        <!-- <li><input type="checkbox">teste<button>X</button></li> -->
 
     </ul>
     <script src="js/script.js" deffer></script>
