Final Commit: The system now can save the tasks in localStorage!!!

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TO DO LIST</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="css/style.css" deffer></script>
+    <link src="css/style.css" deffer></link>
 </head>
 <body>
     <h1>To-do List</h1>
@@ -16,7 +16,7 @@
     <form id="task-form">
     <input type="text" data-index="new" id="task" placeholder="Digite sua tarefa" autofocus>
 
-    <button onclick="addTask()" type="button" >+</button>
+    <button>+</button>
     </form>
     
 
