--- a/index.html
+++ b/index.html
@@ -15,15 +15,11 @@
 
     <form id="task-form">
     <input type="text" data-index="new" id="task" placeholder="Digite sua tarefa" autofocus>
-
     <button>+</button>
-    </form>
-    
 
-    <ul id="task-list" type="none">
-        <!-- <li><input type="checkbox">teste<button>X</button></li> -->
+    </form>   
+    <ul id="task-list" type="none"></ul>
 
-    </ul>
     <script src="js/script.js" deffer></script>
 </body>
 </html>
